--- a/src/index.css
+++ b/src/index.css
@@ -1,59 +1,76 @@
 .container {
-    display:flex;
-    flex-direction:column;
-    align-items: center;
+  display:flex;
+  flex-direction:column;
+  align-items: center;
 }
 
 body {
-    background-color: #FFF;
-    padding: 20px;
-    margin: 0;
-  }
-  h1, h2, p, ul, li {
-    font-family: Georgia;
-    text-align: center;
-  }
-  ul.header li {
-    display: inline;
-    list-style-type: none;
-    margin: 0;
-  }
-  ul.header {
-    background-color: #F1A798;
-    padding: 0;
-  }
-  ul.header li a {
-    color: #FFF;
-    font-weight: bold;
-    text-decoration: none;
-    padding: 20px;
-    display: inline-block;
-  }
-  .content {
-    background-color: #FFF;
-    padding: 20px;
-  }
-  .content h2 {
-    padding: 0;
-    margin: 0;
-  }
-  .content li {
-    margin-bottom: 10px;
-  }
+  background-color: #FFF;
+  padding: 20px;
+  margin: 0;
+}
+h1, h2, p, ul, li {
+  font-family: Georgia;
+  text-align: center;
+  letter-spacing: 5px;
+}
+ul.header li {
+  display: inline;
+  list-style-type: none;
+  margin: 0;
+}
+ul.header {
+  background-color: #3E5C76;
+  padding: 0;
+}
+ul.header li a {
+  color: #748CAB;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 20px;
+  display: inline-block;
+}
+.content {
+  background-color: #FFF;
+  padding: 20px;
+}
+.content h2 {
+  padding: 0;
+  margin: 0;
+}
+.content li {
+  margin-bottom: 10px;
+}
 
-  .active {
-      background-color: #F1BF98;
-  }
+.active {
+    background-color: #F0EBD8;
+}
 
-  .chickenphoto {
+
+
+.footer{
+  position: relative;
+  margin-top:-100px;
+}
+
+
+
+
+  .debutphoto {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    float: right;
+    text-align: left;
   }
 
   img {
-    width: 500px;
+    width: 400px;
     height: 400px;
-    border-radius: 50%;
+    float: right;
+    margin-bottom: 50pt;
+    border-radius: 2%;
+    
+
+    
   }
   
