--- a/src/index.css
+++ b/src/index.css
@@ -48,9 +48,14 @@ ul.header li a {
 
 
 
-.footer{
-  position: relative;
-  margin-top:-100px;
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #3E5C76;
+  color: #748CAB;
+  text-align: center;
 }
 
 
